--- a/index.html
+++ b/index.html
@@ -10,19 +10,20 @@
 <script type="importmap">
 {
   "imports": {
-    "jspdf": "https://esm.sh/jspdf@^3.0.4",
-    "react": "https://esm.sh/react@^19.2.3",
-    "react/": "https://esm.sh/react@^19.2.3/",
-    "react-dom": "https://esm.sh/react-dom@^19.2.3",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "react-dom/client": "https://esm.sh/react-dom@^19.2.3/client",
-    "lucide-react": "https://esm.sh/lucide-react@^0.561.0",
-    "jspdf-autotable": "https://esm.sh/jspdf-autotable@^5.0.2"
+    "jspdf": "https://esm.sh/jspdf@3.0.4",
+    "react": "https://esm.sh/react@19.2.3",
+    "react/": "https://esm.sh/react@19.2.3/",
+    "react-dom": "https://esm.sh/react-dom@19.2.3",
+    "react-dom/": "https://esm.sh/react-dom@19.2.3/",
+    "react-dom/client": "https://esm.sh/react-dom@19.2.3/client",
+    "lucide-react": "https://esm.sh/lucide-react@0.561.0",
+    "jspdf-autotable": "https://esm.sh/jspdf-autotable@5.0.2"
   }
 }
 </script>
 </head>
 <body>
     <div id="root"></div>
+    <script type="module" src="index.tsx"></script>
 </body>
 </html>
